Add script to import other .html-file into .html-file with mock example.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -69,6 +69,14 @@
     </header>
 
     <main>
+        <!-- Tabs -->
+        <div class="tab-content">
+            <div class="tab-pane fade show active" id="monitor" role="tabpanel">
+                <div class="target">
+                    <script src="import.js"></script>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
