--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,17 @@
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script type="importmap">
+        {
+            "imports": {
+                "htmx": "/npm/htmx.org"
+            }
+        }
+    </script>
+    <script type="module">
+        import 'htmx';
+    </script>
 </head>
 <body>
     <!-- header, including the name, a clock and an alert window -->
@@ -50,6 +61,16 @@
             aria-current = "page" ?
 
         -->
+
+        <!--
+            Menü:
+            - Monitor
+            - Zimmer
+            - Patienten
+            - OP-Monitor
+            - Personal
+            - Dokumente
+         -->
         <nav class="nav nav-tabs">
             <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#monitor" tabindex="0" href="#">Monitor</a>
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" tabindex="2" href="#" role="button" aria-expanded="false">Zimmer</a>
@@ -63,6 +84,7 @@
             </ul>
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#patienten" tabindex="1" href="#">Patienten</a>
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#opmonitor" tabindex="3" href="#">OP-Monitor</a>
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#personal" tabindex="3" href="#">Personal</a>
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#dokumente" tabindex="4" href="#">Dokumente</a>
             <a class="nav-link disabled" data-bs-toggle="tab" data-bs-target="#privat" tabindex="-1" aria-disabled="true"  href="#">Privat</a>
         </nav>
@@ -74,6 +96,13 @@
             <div class="tab-pane fade show active" id="monitor" role="tabpanel">
                 <div class="target">
                     <script src="import.js"></script>
+                </div>
+
+                <div><br/>Abstandshalter<br/></div>
+
+                <div class="container">
+                    <div id="loadGreeting">Hier ist ein: </div>
+                    <button hx-post="/greet" hx-target="#loadGreeting" >Click to load.</button>
                 </div>
             </div>
         </div>
