--- a/src/main/resources/static/patientenTAB.html
+++ b/src/main/resources/static/patientenTAB.html
@@ -11,8 +11,4 @@
     </script>
 </head>
 
-<h2>Hi!</h2>
-<div class="container">
-    <div id="greeting">HTMX is not working.. </div>
-    <div hx-trigger="load" hx-post="/greet" hx-target="#greeting"></div>
-</div>
+Patienten
