--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -94,7 +94,8 @@
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#personal" tabindex="3" href="#">Personal</a>
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#dokumente" tabindex="4" href="#">Dokumente</a>
             <a class="nav-link disabled" data-bs-toggle="tab" data-bs-target="#privat" tabindex="-1" aria-disabled="true"  href="#">Privat</a>
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#test" tabindex="4" href="#">Test</a>
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#cards" tabindex="5" href="#">Cards</a>
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#test" tabindex="6" href="#">Test</a>
         </nav>
     </header>
 
@@ -150,7 +151,7 @@
                 </div>
             </div>
 
-            <div class="tab-pane fade show" id="test" role="tabpanel">
+            <div class="tab-pane fade show" id="cards" role="tabpanel">
                 <div class="row">
                     <div class="container">
                         <div>Test</div>
@@ -261,40 +262,73 @@
                             </div>
                         </div>
 
-                        <!-- Card group -->
-                        <div class="row">
-                            <div class="card-group">
-                                <div class="card">
-                                    <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                        <!-- Carousel -->
+                        <div class="container">
+                            <div class="row mb-2">
+                                <div class="col-md-5">
+                                <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="https://picsum.photos/300/200" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>First slide label</h5>
+                                            <p>Some representative placeholder content for the first slide.</p>
+                                        </div>
                                     </div>
-                                    <div class="card-footer">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
+                                    <div class="carousel-item">
+                                        <img src="https://picsum.photos/300/200" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Second slide label</h5>
+                                            <p>Some representative placeholder content for the second slide.</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="https://picsum.photos/300/200" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Third slide label</h5>
+                                            <p>Some representative placeholder content for the third slide.</p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card">
-                                    <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                                 </div>
-                                <div class="card">
-                                    <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <small class="text-muted">Last updated 3 mins ago</small>
-                                    </div>
                                 </div>
                             </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- Test -->
+            <div class="tab-pane fade show" id="test" role="tabpanel">
+                <div class="container">
+                    <div class="row mb-2 mt-2 border border-1 border-dark w-50 mx-auto p-5">
+                        <p class="border">
+                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                            sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et.
+                        </p>
+                        <p class="m-5 border">
+                            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
+                            est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+                            consetetur sadipscing elitr, sed diam.
+                        </p>
+                        <div class="w-50 mx-auto text-center bg-dark text-white">
+                            Centered Element
                         </div>
                     </div>
                 </div>
