Add basic table for patients

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -151,6 +151,7 @@
                 </div>
             </div>
 
+            <!-- buttons -->
             <div class="tab-pane fade show" id="cards" role="tabpanel">
                 <div class="row">
                     <div class="container">
@@ -331,6 +332,69 @@
                             Centered Element
                         </div>
                     </div>
+                </div>
+
+                <div class="container mt-2">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Patienten-ID</th>
+                                <th scope="col">Station</th>
+                                <th scope="col">Vorname</th>
+                                <th scope="col">Nachname</th>
+                                <th scope="col">Alter</th>
+                                <th scope="col">Zimmer</th>
+                                <th scope="col">Septisch</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>2</td>
+                                <td>Peter</td>
+                                <td>Pan</td>
+                                <td>19</td>
+                                <td>21</td>
+                                <td>Negativ</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>2</td>
+                                <td>Carla</td>
+                                <td>Cordoba</td>
+                                <td>64</td>
+                                <td>22</td>
+                                <td>Negativ</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>2</td>
+                                <td>Bodo</td>
+                                <td>Bach</td>
+                                <td>33</td>
+                                <td>20</td>
+                                <td class="table-danger">Positiv</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>2</td>
+                                <td>Tim</td>
+                                <td>Toupet</td>
+                                <td>36</td>
+                                <td>20</td>
+                                <td class="table-warning">Negativ</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>2</td>
+                                <td>Anna</td>
+                                <td>Ammsee</td>
+                                <td>41</td>
+                                <td>23</td>
+                                <td>Negativ</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
