--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,17 @@
     <script type="module">
         import 'htmx';
     </script>
+
+    <script>
+        function t(){
+            var clock = document.getElementById('headerClock');
+            var date = document.getElementById('headerDate');
+            var d = new Date();
+            clock.textContent = d.toLocaleTimeString();
+            date.textContent = d.toLocaleDateString();
+        }
+        setInterval(t,1000);
+    </script>
 </head>
 <body>
     <!-- header, including the name, a clock and an alert window -->
@@ -44,14 +55,10 @@
                     </div>
                     <div class="row">
                         <div class="col gy-4 text-center">
-                            <div class="p-2 border">
-                                HH:mm:ss
-                            </div>
+                            <div id="headerClock" class="p-2 border">HH:mm:ss</div>
                         </div>
                         <div class="col gy-4 text-center">
-                            <div class="p-2 border">
-                                dd.MM.YYYY
-                            </div>
+                            <div id="headerDate" class="p-2 border">dd:MM:YYYY</div>
                         </div>
                     </div>
                 </div>
@@ -68,18 +75,7 @@
         <!-- Tab navigation menu -->
         <!--
             aria-current = "page" ?
-
         -->
-
-        <!--
-            Menü:
-            - Monitor
-            - Zimmer
-            - Patienten
-            - OP-Monitor
-            - Personal
-            - Dokumente
-         -->
         <nav class="nav nav-tabs">
             <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#stations-monitor" tabindex="0" href="#">Monitor</a>
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" tabindex="2" href="#" role="button" aria-expanded="false">Zimmer</a>
@@ -107,7 +103,9 @@
             <!-- Allg. Monitor -->
             <div class="tab-pane fade show active" id="stations-monitor" role="tabpanel">
                 <div class="container">
-                    <div>Monitor</div>
+                    <div th:insert="stationsmonitor :: monitor">To be replaced.</div>
+                    <div class="m-2">PLACEHOLDER</div>
+                    <div th:replace="stationsmonitor :: monitor">To be replaced.</div>
                 </div>
             </div>
 
@@ -121,7 +119,12 @@
             <!-- Patienten -->
             <div class="tab-pane fade show" id="patienten" role="tabpanel">
                 <div class="container">
-                    <div>Patienten</div>
+                    <div class="mb-2">Patienten</div>
+
+                    <!-- HTMX Injection Table-->
+                    <div class="container mt-2" id="patientsTable" hx-trigger="load" hx-get="/patients/populatePatientTable">
+                        To be Replaced!
+                    </div>
                 </div>
             </div>
 
@@ -224,7 +227,7 @@
                                     <p class="card-text">
                                         Another text containing symbols and what not. Also a link.
                                     </p>
-                                    <a href="op-monitorTAB.html" class="card-link">Link to OP-Monitor.</a>
+                                    <a href="../templates/op-monitorTAB.html" class="card-link">Link to OP-Monitor.</a>
                                 </div>
                             </div>
                         </div>
@@ -398,47 +401,6 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>
-
-                <!-- Injection Table Aim-->
-                <div class="container mt-2">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr>
-                            <th scope="col">Patienten-ID</th>
-                            <th scope="col">Station</th>
-                            <th scope="col">Vorname</th>
-                            <th scope="col">Nachname</th>
-                            <th scope="col">Alter</th>
-                            <th scope="col">Zimmer</th>
-                            <th scope="col">Septisch</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>2</td>
-                            <td>Peter</td>
-                            <td>Pan</td>
-                            <td>19</td>
-                            <td>21</td>
-                            <td>Negativ</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>2</td>
-                            <td>Bodo</td>
-                            <td>Bach</td>
-                            <td>33</td>
-                            <td>20</td>
-                            <td class="table-danger">Positiv</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <!-- HTMX Injection Table-->
-                <div class="container mt-2" id="patientsTable" hx-trigger="load" hx-get="/patients/populatePatientTable">
-                    To be Replaced!
                 </div>
             </div>
         </div>
