Delete tab files

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -227,7 +227,7 @@
                                     <p class="card-text">
                                         Another text containing symbols and what not. Also a link.
                                     </p>
-                                    <a href="../templates/op-monitorTAB.html" class="card-link">Link to OP-Monitor.</a>
+                                    <a href="" class="card-link">Link to OP-Monitor.</a>
                                 </div>
                             </div>
                         </div>
